; ModuleID = '/home/carl/AnghaBench/citus/src/backend/distributed/relay/extr_relay_event_utility.c_SetSchemaNameIfNotExist.c'
source_filename = "/home/carl/AnghaBench/citus/src/backend/distributed/relay/extr_relay_event_utility.c_SetSchemaNameIfNotExist.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

; Function Attrs: noinline nounwind optnone uwtable
define dso_local void @SetSchemaNameIfNotExist(i8** %0, i8* %1) #0 {
  %3 = alloca i8**, align 8
  %4 = alloca i8*, align 8
  store i8** %0, i8*** %3, align 8
  store i8* %1, i8** %4, align 8
  %5 = load i8**, i8*** %3, align 8
  %6 = load i8*, i8** %5, align 8
  %7 = icmp eq i8* %6, null
  br i1 %7, label %8, label %12

8:                                                ; preds = %2
  %9 = load i8*, i8** %4, align 8
  %10 = call i8* @pstrdup(i8* %9)
  %11 = load i8**, i8*** %3, align 8
  store i8* %10, i8** %11, align 8
  br label %12

12:                                               ; preds = %8, %2
  ret void
}

declare dso_local i8* @pstrdup(i8*) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
